--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -20,6 +20,16 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install system dependencies
+        run: |
+          echo "Installing SDL and related libraries required for pygame"
+          sudo apt-get update && sudo apt-get install -y \
+            libsdl2-dev \
+            libfreetype6-dev \
+            libportmidi-dev \
+            libswscale-dev \
+            libavformat-dev \
+            libavcodec-dev
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
